# kletch

./: .atom-build.cson  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  kletch  kletch_test
CMakeModules/: FindAntTweakBar.cmake
cmake/modules/: FindAntTweakBar.cmake
misc/: bounds.py  fresnel.py  integral1.py  jabba.py  reference_fresnel_test_gen.py  reference_fresnel_test_gen_eval_bgk1.py
playground/: fresnel.py
src/: gl.h  hello.cpp  hello.h  kletch.cpp  kletch_prefix.h  libkletch_prefix.h  prefix.h  prefix_headers.h  prefix_usings.h  printing.h
src/asset/: CMakeLists.txt  all.h  assc.py  asset.h  asset_header.h  asset_pack.cpp  asset_pack.h  exception.h  prefix.h  string_asset_pack.cpp  string_asset_pack.h  vector_asset_pack.h
src/bench/: CMakeLists.txt  main.cpp  prefix.h  smk1_cond.cpp  smk1_cond.py
src/demo/: CMakeLists.txt  aimer_demo.cpp  aimer_demo.h  assets.h  camera2.cpp  camera2.h  constrained_clothoid_demo.cpp  constrained_clothoid_demo.h  constrained_fitter_demo.cpp  constrained_fitter_demo.h  control_overlay.cpp  control_overlay.h  control_point_manager.h  control_point_overlay.cpp  control_point_overlay.h  demo.cpp  demo.h  demo_event.h  event.cpp  event.h  fitter_demo.cpp  fitter_demo.h  gl_context_guard.h  gl_context_snapshot.cpp  gl_context_snapshot.h  gl_ext.cpp  gl_ext.h  gl_utils.cpp  gl_utils.h  hello_demo.cpp  hello_demo.h  int_range.h  kletch.cpp  kletch_demo.cpp  kletch_demo.h  prefix.h  resemb.cpp  resgen.cpp  resources.cpp  resources.h
src/demo/SDLMain/: SDLMain.m
src/demo/shaders/: aimer_demo_cloth_vx.glsl  aimer_point_vx.glsl  constrained_clothoid_demo_arc_vx.glsl  control_overlay_vector_cap_vx.glsl  control_overlay_vector_edge_vx.glsl  grid_vx.glsl  hello_ft.glsl  hello_vx.glsl  kletch_demo_spline_vx.glsl  mat3_pos2_vx.glsl  uniform3_ft.glsl  uniform4_ft.glsl  varying3_ft.glsl
src/lib/: CMakeLists.txt  clothoid_aimer.cpp  clothoid_aimer.h  clothoid_fitter.cpp  clothoid_fitter.h  constrained_clothoid_fitter.cpp  constrained_clothoid_fitter.h  curve_window.cpp  curve_window.h  display_fresnel.cpp  display_fresnel.h  fresnel.cpp  fresnel.h  fresnel_core.hpp  fresnel_core_log.hpp  heald.cpp  heald.h  hello.h  kd_tree.h  kletch.cpp  kletch.h  line_fitter.cpp  line_fitter.h  precise_fresnel.cpp  precise_fresnel.h  prefix.h  reference_fresnel.cpp  reference_fresnel.h
src/math/: special_functions.h
test/: CMakeLists.txt  fresnel_test.cpp  gen_test_data.py  genutil.h  hello_test.cpp  main.cpp  prefix.h  reference_fresnel_test.cpp
